--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "bonus-api-v1",
   "version": "1.0.0",
   "description": "Projeto desenvolvido na disciplina de Desenvolvimento de Serviços e APIs do curso de Análise e Desenvolvimento de Sistemas - Faculdade UniSenac - SENAC-RS.",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
-    "dev": "node app.js"
+    "dev": "node src/app.js"
   },
-  "keywords": [],
+  "keywords": [
+    "api",
+    "nodejs",
+    "javascript",
+    "express"
+  ],
   "author": "Marcelo Pereira",
   "contributors": [
     {
@@ -19,6 +24,14 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.41.0",
+    "prettier": "^2.8.8",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1"
   },
   "type": "module"
 }
