--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,31 @@
 {
   "env": {
     "es2021": true,
-    "node": true
+    "node": true,
+    "commonjs": false
   },
   "extends": [
-    "airbnb-base",
     "prettier",
-    "prettier/prettier",
-    "plugin:prettier/recommended"
+    "airbnb-base",
+    "eslint:recommended",
+    "plugin:prettier/recommended",
+    "plugin:security/recommended"
   ],
   "overrides": [],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "plugins": ["import", "prettier"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "import/extensions": [
+      "error",
+      "always",
+      {
+        "ignorePackages": true,
+        "js": "never"
+      }
+    ]
   }
 }
