--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Projeto desenvolvido na disciplina de Desenvolvimento de Serviços e APIs do curso de Análise e Desenvolvimento de Sistemas - Faculdade UniSenac - SENAC-RS.",
   "main": "app.js",
   "scripts": {
-    "dev": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "node src/app.js",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "keywords": [
     "api",
@@ -15,10 +18,13 @@
   "author": "Marcelo Pereira",
   "contributors": [
     {
-      "name": "Marcelo Pereira"
+      "name": "Marcelo Pereira",
+      "email": "marcelo.fatecpoa@gmail.com",
+      "url": "https://marcelopereira.dev"
     },
     {
-      "name": "Sohaib Mohammed"
+      "name": "Sohaib Mohammed",
+      "email": "sohaibsalama2021@gmail.com"
     }
   ],
   "repository": {
@@ -31,11 +37,11 @@
   },
   "devDependencies": {
     "eslint": "^8.41.0",
-    "prettier": "^2.8.8",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1"
-  },
-  "type": "module"
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.8"
+  }
 }
