--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Projeto desenvolvido na disciplina de Desenvolvimento de Serviços e APIs do curso de Análise e Desenvolvimento de Sistemas - Faculdade UniSenac - SENAC-RS.",
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "node src/app.js",
+    "start": "src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "jest",
     "coverage": "jest --coverage"
   },
@@ -42,6 +42,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.8"
   }
 }
