--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "swagger-ui-express": "^4.6.3"
   },
